--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <p>
             ReALM‑GEN brings together researchers and practitioners working on aligning flow‑ and diffusion‑based
             models with real‑world constraints and human preferences. Topics include distribution tilting, reward‑guided
-            generation, discrete diffusion guidance, test‑time scaling, continual learning, robustness, evaluation,
+            generation, discrete diffusion guidance, test‑time scaling,
             and applications in language, vision, scientific imaging, molecules, and robotics.
           </p>
         </article>
@@ -125,7 +125,7 @@
       <div class="grid">
         <article class="card span12">
           <h3>Call for Papers</h3>
-          <p>We invite 2–4 page extended abstracts (non‑archival) on any relevant topic.
+          <p>We invite 4 page extended abstracts (non‑archival) on any relevant topic.
              All submissions are double‑blind and will receive at least two reviews.
              Accepted papers will be presented as posters; selected works may receive spotlights.</p>
           <ul class="list">
