--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
       <div class="grid">
         <article class="card span12">
           <h3>Call for Papers</h3>
-          <p>We invite 4 page extended abstracts (non‑archival) on any relevant topic.
+          <-- <p>We invite 4 page extended abstracts (non‑archival) on any relevant topic.
              All submissions are double‑blind and will receive at least two reviews.
              Accepted papers will be presented as posters; selected works may receive spotlights.</p>
           <ul class="list">
             <li>Submission site: <strong>TBA</strong></li>
             <li>Formatting & policy: follow ICLR workshop guidelines</li>
             <li>Contact: <a href="#contact">realm‑gen‑org@tba</a></li>
-          </ul>
+          </ul> -->
         </article>
       </div>
     </section>
