--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <div class="grid">
         <article class="card span12">
           <h3>Call for Papers</h3>
-          <-- <p>We invite 4 page extended abstracts (non‑archival) on any relevant topic.
+          <!-- <p>We invite 4 page extended abstracts (non‑archival) on any relevant topic.
              All submissions are double‑blind and will receive at least two reviews.
              Accepted papers will be presented as posters; selected works may receive spotlights.</p>
           <ul class="list">
