--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
         <article class="card span6">
           <h3>Goals</h3>
           <ul class="list">
-            <li>Bridge theory and practice of inference‑time alignment.</li>
-            <li>Surface open problems on safety, controllability, and evaluation.</li>
-            <li>Foster collaboration across academia and industry.</li>
+            <li>Bridge theory and practice of post-training and inference‑time alignment of diffusion and flow models.</li>
           </ul>
         </article>
       </div>
