Update event details for ICLR 2026

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <h1 class="title">Real‑World–Constrained and Preference‑Aligned Flow‑ and Diffusion‑Based Models</h1>
           <p class="subtitle">A workshop on post‑training and inference‑time alignment for generative models.</p>
           <div class="meta">
-            <span class="pill">ICLR 2026 • <em>City/Date TBA</em></span>
+            <span class="pill">ICLR 2026 • <em>Rio de Janeiro/ April 26th, 2026 </em></span>
             <span class="pill">Hybrid (in‑person + virtual)</span>
           </div>
         </div>
@@ -140,7 +140,7 @@
         <article class="card span4">
           <h3>Important Dates</h3>
           <ul class="list">
-            <li>Submission deadline: <strong>TBA</strong></li>
+            <li>Submission deadline: <strong>January 30, 2026</strong></li>
             <li>Notification: <strong>TBA</strong></li>
             <li>Camera‑ready / poster: <strong>TBA</strong></li>
             <li>Workshop: <strong>TBA</strong></li>
