--- a/index.html
+++ b/index.html
@@ -242,52 +242,47 @@
 
           <div class="people-grid">
             <div class="person">
-              <img class="avatar" src="organizers/org-1.jpg" alt="Organizer 1 headshot" />
+              <img class="avatar" src="organizers/charlotte_bunne.jpeg" alt="Organizer 1 headshot" />
               <div>
                 <div class="name">Charlotte Bunne</div>
-                <div class="role">Organizer</div>
                 <div class="affil">EPFL, Switzerland</div>
               </div>
             </div>
 
             <div class="person">
-              <img class="avatar" src="organizers/org-2.jpg" alt="Organizer 2 headshot" />
+              <img class="avatar" src="organizers/giannis_daras.jpeg" alt="Organizer 2 headshot" />
               <div>
                 <div class="name">Giannis Daras</div>
-                <div class="role">Organizer</div>
                 <div class="affil">MIT, USA</div>
               </div>
             </div>
 
             <div class="person">
-              <img class="avatar" src="organizers/org-3.jpg" alt="Organizer 3 headshot" />
+              <img class="avatar" src="organizers/paris_giampouras.jpeg" alt="Organizer 3 headshot" />
               <div>
                 <div class="name">Paris Giampouras</div>
-                <div class="role">Organizer</div>
                 <div class="affil">University of Warwick, UK</div>
               </div>
             </div>
 
             <div class="person">
-              <img class="avatar" src="organizers/org-4.jpg" alt="Organizer 4 headshot" />
+              <img class="avatar" src="organizers/yingzhen_li.jpeg" alt="Organizer 4 headshot" />
               <div>
                 <div class="name">Yingzehn Li </div>
-                <div class="role">Organizer</div>
                 <div class="affil"> Imperial College, UK</div>
               </div>
             </div>
 
             <div class="person">
-              <img class="avatar" src="organizers/org-5.jpg" alt="Organizer 5 headshot" />
+              <img class="avatar" src="organizers/morteza_mardani.jpeg" alt="Organizer 5 headshot" />
               <div>
                 <div class="name">Morteza Mardani</div>
-                <div class="role">Organizer</div>
                 <div class="affil">NVIDIA, USA</div>
               </div>
             </div>
 
             <div class="person">
-              <img class="avatar" src="organizers/org-6.jpg" alt="Organizer 6 headshot" />
+              <img class="avatar" src="organizers/Johann_Wenckstern.jepg" alt="Organizer 6 headshot" />
               <div>
                 <div class="name">Johann Wenckstern</div>
                 <div class="role">Organizer</div>
