Update speaker and panelist details with names and affiliations

--- a/index.html
+++ b/index.html
@@ -187,7 +187,6 @@
         <article class="card span4" id="speakers">
           <h3>Invited Speakers &amp; Panelists (preview)</h3>
           <p class="subtitle" style="margin:0 0 10px;">
-            Replace the placeholders with headshots and names as you confirm participation.
           </p>
 
           <div class="people-grid">
@@ -195,9 +194,9 @@
             <div class="person">
               <img class="avatar" src="speakers/speaker-1.jpg" alt="Speaker 1 headshot" />
               <div>
-                <div class="name">Speaker Name 1</div>
+                <div class="name">Yaron Lipman</div>
                 <div class="role">Invited Speaker</div>
-                <div class="affil">Affiliation / Lab</div>
+                <div class="affil">Meta AI</div>
               </div>
             </div>
 
@@ -205,9 +204,9 @@
             <div class="person">
               <img class="avatar" src="speakers/speaker-2.jpg" alt="Speaker 2 headshot" />
               <div>
-                <div class="name">Speaker Name 2</div>
+                <div class="name">Jong Chul Ye</div>
                 <div class="role">Invited Speaker</div>
-                <div class="affil">Affiliation / Lab</div>
+                <div class="affil">KAIST</div>
               </div>
             </div>
 
@@ -215,9 +214,9 @@
             <div class="person">
               <img class="avatar" src="speakers/panelist-1.jpg" alt="Panelist 1 headshot" />
               <div>
-                <div class="name">Panelist Name 1</div>
+                <div class="name">Ruiqi Gao</div>
                 <div class="role">Panelist</div>
-                <div class="affil">Affiliation / Lab</div>
+                <div class="affil">Google DeepMind</div>
               </div>
             </div>
 
@@ -225,9 +224,9 @@
             <div class="person">
               <img class="avatar" src="speakers/panelist-2.jpg" alt="Panelist 2 headshot" />
               <div>
-                <div class="name">Panelist Name 2</div>
+                <div class="name">Volodymyr Kuleshov</div>
                 <div class="role">Panelist</div>
-                <div class="affil">Affiliation / Lab</div>
+                <div class="affil">Cornell University</div>
               </div>
             </div>
           </div>
