--- a/index.html
+++ b/index.html
@@ -235,13 +235,10 @@
         <!-- UPDATED: Organizers with 6 photos -->
         <article class="card span4" id="organizers">
           <h3>Organizing Team</h3>
-          <p class="subtitle" style="margin:0 0 10px;">
-            Add 6 organizer photos by placing files under <code>organizers/</code>.
-          </p>
-
+         
           <div class="people-grid">
             <div class="person">
-              <img class="avatar" src="organizers/charlotte_bunne.jpeg" alt="Organizer 1 headshot" />
+              <img class="avatar" src="speakers/charlotte_bunne.jpeg" alt="Organizer 1 headshot" />
               <div>
                 <div class="name">Charlotte Bunne</div>
                 <div class="affil">EPFL, Switzerland</div>
@@ -249,7 +246,7 @@
             </div>
 
             <div class="person">
-              <img class="avatar" src="organizers/giannis_daras.jpeg" alt="Organizer 2 headshot" />
+              <img class="avatar" src="speakers/giannis_daras.jpeg" alt="Organizer 2 headshot" />
               <div>
                 <div class="name">Giannis Daras</div>
                 <div class="affil">MIT, USA</div>
@@ -257,7 +254,7 @@
             </div>
 
             <div class="person">
-              <img class="avatar" src="organizers/paris_giampouras.jpeg" alt="Organizer 3 headshot" />
+              <img class="avatar" src="speakers/paris_giampouras.jpeg" alt="Organizer 3 headshot" />
               <div>
                 <div class="name">Paris Giampouras</div>
                 <div class="affil">University of Warwick, UK</div>
@@ -265,7 +262,7 @@
             </div>
 
             <div class="person">
-              <img class="avatar" src="organizers/yingzhen_li.jpeg" alt="Organizer 4 headshot" />
+              <img class="avatar" src="speakers/yingzhen_li.jpeg" alt="Organizer 4 headshot" />
               <div>
                 <div class="name">Yingzehn Li </div>
                 <div class="affil"> Imperial College, UK</div>
@@ -273,7 +270,7 @@
             </div>
 
             <div class="person">
-              <img class="avatar" src="organizers/morteza_mardani.jpeg" alt="Organizer 5 headshot" />
+              <img class="avatar" src="speakers/morteza_mardani.jpeg" alt="Organizer 5 headshot" />
               <div>
                 <div class="name">Morteza Mardani</div>
                 <div class="affil">NVIDIA, USA</div>
@@ -281,7 +278,7 @@
             </div>
 
             <div class="person">
-              <img class="avatar" src="organizers/Johann_Wenckstern.jepg" alt="Organizer 6 headshot" />
+              <img class="avatar" src="speakers/Johann_Wenckstern.jepg" alt="Organizer 6 headshot" />
               <div>
                 <div class="name">Johann Wenckstern</div>
                 <div class="role">Organizer</div>
