Update workshop subtitle for ICLR 2026

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <img class="logo" src="realm-gen-logo.png" alt="ReALM-GEN" />
         <div>
           <h1 class="title">Real-World–Constrained and Preference-Aligned Flow- and Diffusion-Based Models</h1>
-          <p class="subtitle">A workshop on post-training and inference-time alignment for generative models.</p>
+          <p class="subtitle">An ICLR 2026 workshop on post-training and inference-time alignment for generative models.</p>
           <div class="meta">
             <span class="pill">ICLR 2026 • <em>Rio de Janeiro/ April 26th, 2026 </em></span>
             <span class="pill">Hybrid (in-person + virtual)</span>
