--- a/index.html
+++ b/index.html
@@ -171,124 +171,118 @@
       </div>
     </section>
 
-    <section id="dates">
-      <div class="grid">
-        <article class="card span4">
-          <h3>Important Dates</h3>
-          <ul class="list">
-            <li>Submission deadline: <strong>January 30, 2026 (AOE)</strong></li>
-            <li>Notification: <strong>March 1st, 2026</strong></li>
-            <li>Camera-ready / poster: <strong>TBA</strong></li>
-            <li>Workshop: <strong>April 26th, 2026</strong></li>
-          </ul>
-        </article>
+<section id="dates">
+  <div class="grid">
+    <article class="card span4">
+      <h3>Important Dates</h3>
+      <ul class="list">
+        <li>Submission deadline: <strong>January 30, 2026 (AOE)</strong></li>
+        <li>Notification: <strong>March 1st, 2026</strong></li>
+        <li>Camera-ready / poster: <strong>TBA</strong></li>
+        <li>Workshop: <strong>April 26th, 2026</strong></li>
+      </ul>
+    </article>
 
-        <!-- UPDATED: Speakers + Panelists with pictures -->
-        <article class="card span4" id="speakers">
-          <h3>Invited Speakers &amp; Panelists (preview)</h3>
-          <p class="subtitle" style="margin:0 0 10px;">
-          </p>
+    <!-- FULL-WIDTH: Speakers + Panelists -->
+    <article class="card span12" id="speakers">
+      <h3>Invited Speakers &amp; Panelists (preview)</h3>
 
-          <div class="people-grid">
-            <!-- Speaker / Panelist 1 -->
-            <div class="person">
-              <img class="avatar" src="speakers/speaker-1.jpg" alt="Speaker 1 headshot" />
-              <div>
-                <div class="name">Yaron Lipman</div>
-                <div class="role">Invited Speaker</div>
-                <div class="affil">Meta AI</div>
-              </div>
-            </div>
-
-            <!-- Speaker / Panelist 2 -->
-            <div class="person">
-              <img class="avatar" src="speakers/speaker-2.jpg" alt="Speaker 2 headshot" />
-              <div>
-                <div class="name">Jong Chul Ye</div>
-                <div class="role">Invited Speaker</div>
-                <div class="affil">KAIST</div>
-              </div>
-            </div>
-
-            <!-- Speaker / Panelist 3 -->
-            <div class="person">
-              <img class="avatar" src="speakers/panelist-1.jpg" alt="Panelist 1 headshot" />
-              <div>
-                <div class="name">Ruiqi Gao</div>
-                <div class="role">Panelist</div>
-                <div class="affil">Google DeepMind</div>
-              </div>
-            </div>
-
-            <!-- Speaker / Panelist 4 -->
-            <div class="person">
-              <img class="avatar" src="speakers/panelist-2.jpg" alt="Panelist 2 headshot" />
-              <div>
-                <div class="name">Volodymyr Kuleshov</div>
-                <div class="role">Panelist</div>
-                <div class="affil">Cornell University</div>
-              </div>
-            </div>
+      <div class="people-grid">
+        <div class="person">
+          <img class="avatar" src="speakers/speaker-1.jpg" alt="Yaron Lipman headshot" />
+          <div>
+            <div class="name">Yaron Lipman</div>
+            <div class="role">Invited Speaker</div>
+            <div class="affil">Meta AI</div>
           </div>
-        </article>
+        </div>
 
-        <!-- UPDATED: Organizers with 6 photos -->
-        <article class="card span4" id="organizers">
-          <h3>Organizing Team</h3>
-         
-          <div class="people-grid">
-            <div class="person">
-              <img class="avatar" src="speakers/charlotte_bunne.jpeg" alt="Organizer 1 headshot" />
-              <div>
-                <div class="name">Charlotte Bunne</div>
-                <div class="affil">EPFL, Switzerland</div>
-              </div>
-            </div>
-
-            <div class="person">
-              <img class="avatar" src="speakers/giannis_daras.jpeg" alt="Organizer 2 headshot" />
-              <div>
-                <div class="name">Giannis Daras</div>
-                <div class="affil">MIT, USA</div>
-              </div>
-            </div>
-
-            <div class="person">
-              <img class="avatar" src="speakers/paris_giampouras.jpeg" alt="Organizer 3 headshot" />
-              <div>
-                <div class="name">Paris Giampouras</div>
-                <div class="affil">University of Warwick, UK</div>
-              </div>
-            </div>
-
-            <div class="person">
-              <img class="avatar" src="speakers/yingzhen_li.jpeg" alt="Organizer 4 headshot" />
-              <div>
-                <div class="name">Yingzehn Li </div>
-                <div class="affil"> Imperial College, UK</div>
-              </div>
-            </div>
-
-            <div class="person">
-              <img class="avatar" src="speakers/morteza_mardani.jpeg" alt="Organizer 5 headshot" />
-              <div>
-                <div class="name">Morteza Mardani</div>
-                <div class="affil">NVIDIA, USA</div>
-              </div>
-            </div>
-
-            <div class="person">
-              <img class="avatar" src="speakers/Johann_Wenckstern.jepg" alt="Organizer 6 headshot" />
-              <div>
-                <div class="name">Johann Wenckstern</div>
-                <div class="role">Organizer</div>
-                <div class="affil">EPFL, Seitzerland</div>
-              </div>
-            </div>
+        <div class="person">
+          <img class="avatar" src="speakers/speaker-2.jpg" alt="Jong Chul Ye headshot" />
+          <div>
+            <div class="name">Jong Chul Ye</div>
+            <div class="role">Invited Speaker</div>
+            <div class="affil">KAIST</div>
           </div>
-        </article>
+        </div>
+
+        <div class="person">
+          <img class="avatar" src="speakers/panelist-1.jpg" alt="Ruiqi Gao headshot" />
+          <div>
+            <div class="name">Ruiqi Gao</div>
+            <div class="role">Panelist</div>
+            <div class="affil">Google DeepMind</div>
+          </div>
+        </div>
+
+        <div class="person">
+          <img class="avatar" src="speakers/panelist-2.jpg" alt="Volodymyr Kuleshov headshot" />
+          <div>
+            <div class="name">Volodymyr Kuleshov</div>
+            <div class="role">Panelist</div>
+            <div class="affil">Cornell University</div>
+          </div>
+        </div>
       </div>
-    </section>
+    </article>
+
+    <!-- FULL-WIDTH: Organizers -->
+    <article class="card span12" id="organizers">
+      <h3>Organizing Team</h3>
+
+      <div class="people-grid">
+        <div class="person">
+          <img class="avatar" src="speakers/charlotte_bunne.jpeg" alt="Charlotte Bunne headshot" />
+          <div>
+            <div class="name">Charlotte Bunne</div>
+            <div class="affil">EPFL, Switzerland</div>
+          </div>
+        </div>
+
+        <div class="person">
+          <img class="avatar" src="speakers/giannis_daras.jpeg" alt="Giannis Daras headshot" />
+          <div>
+            <div class="name">Giannis Daras</div>
+            <div class="affil">MIT, USA</div>
+          </div>
+        </div>
+
+        <div class="person">
+          <img class="avatar" src="speakers/paris_giampouras.jpeg" alt="Paris Giampouras headshot" />
+          <div>
+            <div class="name">Paris Giampouras</div>
+            <div class="affil">University of Warwick, UK</div>
+          </div>
+        </div>
+
+        <div class="person">
+          <img class="avatar" src="speakers/yingzhen_li.jpeg" alt="Yingzhen Li headshot" />
+          <div>
+            <div class="name">Yingzhen Li</div>
+            <div class="affil">Imperial College, UK</div>
+          </div>
+        </div>
+
+        <div class="person">
+          <img class="avatar" src="speakers/morteza_mardani.jpeg" alt="Morteza Mardani headshot" />
+          <div>
+            <div class="name">Morteza Mardani</div>
+            <div class="affil">NVIDIA, USA</div>
+          </div>
+        </div>
+
+        <div class="person">
+          <img class="avatar" src="speakers/Johann_Wenckstern.jepg" alt="Johann Wenckstern headshot" />
+          <div>
+            <div class="name">Johann Wenckstern</div>
+            <div class="affil">EPFL, Switzerland</div>
+          </div>
+        </div>
+      </div>
+    </article>
+  </div>
+</section>
+
 
     <section id="subscribe">
       <div class="grid">
